After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722954 - gen-introspect's use of -U__GNUC__ causes problems
gen-introspect's use of -U__GNUC__ causes problems
Status: RESOLVED FIXED
Product: vala
Classification: Core
Component: GObject Introspection
unspecified
Other All
: Normal normal
: ---
Assigned To: Vala maintainers
Vala maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-25 06:57 UTC by Allison Karlitskaya (desrt)
Modified: 2014-02-09 21:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gen-introspect: pretend to be lint (1.44 KB, patch)
2014-01-25 06:57 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Allison Karlitskaya (desrt) 2014-01-25 06:57:40 UTC
Some system headers (notably <stdarg.h> on FreeBSD) get upset when they
see an unexpected compiler.  We go out of our way to pass -U__GNUC__ to
cpp from the scanner code during gen-introspect and this is causing
problems.

As a workaround, we can pretend to be lint, which fixes the issue at
least for FreeBSD.
Comment 1 Allison Karlitskaya (desrt) 2014-01-25 06:57:41 UTC
Created attachment 267174 [details] [review]
gen-introspect: pretend to be lint
Comment 2 Allison Karlitskaya (desrt) 2014-01-25 06:58:32 UTC
http://fxr.watson.org/fxr/source/x86/include/stdarg.h is the file in question, fwiw.

Note near the bottom:

   73 #else
   74 #error this file needs to be ported to your compiler
   75 #endif
Comment 3 Jürg Billeter 2014-02-09 16:57:20 UTC
Review of attachment 267174 [details] [review]:

Thanks for the patch. I don't have a FreeBSD system around but this looks fine to me.
Comment 4 Allison Karlitskaya (desrt) 2014-02-09 21:24:22 UTC
Attachment 267174 [details] pushed as aff8625 - gen-introspect: pretend to be lint